# Rclient

./: Main.hs  Rclient.hs  Tests.hs  rclient.cabal
Network/R/: Client.hs  Constants.hs  Internal.hs
Network/Rserve/: Client.hs  Constants.hs  Internal.hs
examples/: Main.hs
